Swagger Get all users & delete account
